replaced next -> inc; added last, verge

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="./index.js"></script>
   </head>
   <body>
-    press F12
+    <h1>n-ary vectors (long numbers)</h1>
+
+    <input type="number" placeholder="base">
   </body>
 </html>
