added examples on html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,141 @@
   <head>
     <meta charset="utf-8">
     <title>n-ary vectors</title>
-    <script src="./index.js"></script>
+    <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+    <script src="n-ary.js"></script>
+    <script src="https://unpkg.com/vue"></script>
+    <script src="index.js">
+    </script>
   </head>
   <body>
     <h1>n-ary vectors (long numbers)</h1>
 
-    <input type="number" placeholder="base">
+    <div id="vm" class="">
+      {{message}}
+      <form id="form">
+        <input v-model="base" type="number" name="base" placeholder="base" value="2" min="1">
+        <input v-model="length" type="number" name="length" placeholder="length" value="1" min="0">
+        <input type="submit" value="ok">
+      </form>
+
+      <p class="">
+        <div class="example-desc">Zero vector:</div>
+        <div class="example">
+          nAry(<b>{{base}}</b>).zero(<b>{{length}}</b>) = <b>{{zero}}</b>
+        </div>
+      </p>
+
+      <p class="">
+        <div class="example-desc">Last vector:</div>
+        <div class="example">
+          nAry(<b>{{base}}</b>).last(<b>{{length}}</b>) = <b>{{last}}</b>
+        </div>
+      </p>
+
+      <p class="">
+        <div class="example-desc">Random vector:</div>
+        <div class="example">
+          nAry(<b>{{base}}</b>).random(<b>{{length}}</b>) = <b>{{random}}</b>
+        </div>
+      </p>
+
+      <p class="">
+        <div class="example-desc">Incremented vector:</div>
+        <div class="example">
+          nAry(<b>{{base}}</b>).inc(<b>{{random}}</b>) = <b>{{inc}}</b>
+        </div>
+      </p>
+
+      <p class="">
+        <div class="example-desc">All possible vectors:</div>
+        <div class="example">
+          nAry(<b>{{base}}</b>).all(<b>{{length}}</b>) =
+          <b>
+            <ul>
+              <li v-for="vector of all">{{vector}}</li>
+            </ul>
+          </b>
+        </div>
+      </p>
+
+      <p class="">
+        <div class="example-desc">The only {{base}}-ary verge of a {{length}}-dimension table:</div>
+        <div class="example">
+          nAry(<b>{{base}}</b>).verge(<b>{{length}}</b>) =
+          <b>
+            <ul>
+              <li v-for="vector of verge">{{vector}}</li>
+            </ul>
+          </b>
+        </div>
+      </p>
+
+      <p class="">
+        <div class="example-desc">Set of 5 random vectors:</div>
+        <div class="example">
+          nAry(<b>{{base}}</b>).random(<b>{{length}}</b>)(<b>5</b>) =
+          <b>
+            <ul>
+              <li v-for="vector of randomSet">{{vector}}</li>
+            </ul>
+          </b>
+        </div>
+      </p>
+
+      <p class="">
+        <div class="example-desc">Coerce to decimal number:</div>
+        <div class="example">
+          nAry(<b>{{base}}</b>).inc(<b>{{random}}</b>) = <b>{{index}}</b>
+        </div>
+      </p>
+
+      <p class="">
+        <div class="example-desc">Sum of vector digits:</div>
+        <div class="example">
+          nAry(<b>{{base}}</b>).sumOfDigits(<b>{{random}}</b>) = <b>{{sumOfDigits}}</b>
+        </div>
+      </p>
+
+    </div>
+
+
+
+
+
+    <script>
+      const query = location.search.slice(1).split('&').reduce((prev, item) =>
+      // ({ ...prev, item.split('=')[0]: item.split('=')[1] })
+        Object.assign(prev, { [item.split('=')[0]]: +item.split('=')[1] }),
+        {}
+      );
+      console.log(location.search,query);
+      const random = nAry(query.base).random(query.length);
+
+      var vm = new Vue({
+        el: '#vm',
+        data: {
+          base: query.base,
+          length: query.length,
+          message: 'Hello Vue!',
+          zero: nAry(query.base).zero(query.length),
+          last: nAry(query.base).last(query.length),
+          random,
+          inc: nAry(query.base).inc(random),
+          all: nAry(query.base).all(query.length),
+          verge: nAry(query.base).verge(query.length),
+          randomSet: nAry(query.base).randomSet(query.length)(5),
+          index: nAry(query.base).index(random),
+          sumOfDigits: nAry(query.base).sumOfDigits(random),
+        },
+        computed: {
+
+        },
+        methods: {
+
+        },
+      });
+
+
+    </script>
   </body>
 </html>
