--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </p>
 
       <p class="">
-        <div class="example-desc">Coerce to decimal number:</div>
+        <div class="example-desc">Coercing to decimal number:</div>
         <div class="example">
           nAry(<b>{{base}}</b>).inc(<b>{{random}}</b>) = <b>{{index}}</b>
         </div>
@@ -99,9 +99,6 @@
       </p>
 
     </div>
-
-
-
 
 
     <script>
