minor fix; new ideas

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <p class="">
         <div class="example-desc">Coercing to decimal number:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).inc(<b>{{random}}</b>) = <b>{{index}}</b>
+          nAry(<b>{{base}}</b>).index(<b>{{random}}</b>) = <b>{{index}}</b>
         </div>
       </p>
 
