--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <p class="">
         <div class="example-desc">Set of 5 random vectors:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).random(<b>{{length}}</b>)(<b>5</b>) =
+          nAry(<b>{{base}}</b>).randomSet(<b>{{length}}</b>)(<b>5</b>) =
           <b>
             <ul>
               <li v-for="vector of randomSet">{{vector}}</li>
