--- a/index.html
+++ b/index.html
@@ -23,35 +23,35 @@
       <p class="">
         <div class="example-desc">Zero vector:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).zero(<b>{{length}}</b>) = <b>{{zero}}</b>
+          nAry(<b>{{base}}</b>)(<b>{{length}}</b>).zero() = <b>{{zero}}</b>
         </div>
       </p>
 
       <p class="">
         <div class="example-desc">Last vector:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).last(<b>{{length}}</b>) = <b>{{last}}</b>
+          nAry(<b>{{base}}</b>)(<b>{{length}}</b>).last() = <b>{{last}}</b>
         </div>
       </p>
 
       <p class="">
         <div class="example-desc">Random vector:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).random(<b>{{length}}</b>) = <b>{{random}}</b>
+          nAry(<b>{{base}}</b>)(<b>{{length}}</b>).random() = <b>{{random}}</b>
         </div>
       </p>
 
       <p class="">
         <div class="example-desc">Incremented vector:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).inc(<b>{{random}}</b>) = <b>{{inc}}</b>
+          nAry(<b>{{base}}</b>)().inc(<b>{{random}}</b>) = <b>{{inc}}</b>
         </div>
       </p>
 
       <p class="">
         <div class="example-desc">All possible vectors:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).all(<b>{{length}}</b>) =
+          nAry(<b>{{base}}</b>)(<b>{{length}}</b>).all() =
           <b>
             <ul>
               <li v-for="vector of all">{{vector}}</li>
@@ -63,7 +63,7 @@
       <p class="">
         <div class="example-desc">The only {{base}}-ary verge of a {{length}}-dimension table:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).verge(<b>{{length}}</b>) =
+          nAry(<b>{{base}}</b>)(<b>{{length}}</b>).verge() =
           <b>
             <ul>
               <li v-for="vector of verge">{{vector}}</li>
@@ -75,7 +75,7 @@
       <p class="">
         <div class="example-desc">Set of 5 random vectors:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).randomSet(<b>{{length}}</b>)(<b>5</b>) =
+          nAry(<b>{{base}}</b>)(<b>{{length}}</b>).randomSet(<b>5</b>) =
           <b>
             <ul>
               <li v-for="vector of randomSet">{{vector}}</li>
@@ -87,21 +87,21 @@
       <p class="">
         <div class="example-desc">Coercing to decimal number:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).index(<b>{{random}}</b>) = <b>{{index}}</b>
+          nAry(<b>{{base}}</b>)().index(<b>{{random}}</b>) = <b>{{index}}</b>
         </div>
       </p>
 
       <p class="">
         <div class="example-desc">Sum of vector digits:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).sumOfDigits(<b>{{random}}</b>) = <b>{{sumOfDigits}}</b>
+          nAry(<b>{{base}}</b>)().sumOfDigits(<b>{{random}}</b>) = <b>{{sumOfDigits}}</b>
         </div>
       </p>
 
       <p class="">
         <div class="example-desc">All vectors with sum of digits equal 2:</div>
         <div class="example">
-          nAry(<b>{{base}}</b>).sumEquals(<b>{{length}}</b>)(<b>2</b>) =
+          nAry(<b>{{base}}</b>)(<b>{{length}}</b>).sumEquals(<b>2</b>) =
           <b>
             <ul>
               <li v-for="vector of sumEquals">{{vector}}</li>
@@ -121,7 +121,7 @@
         {}
       );
       console.log(location.search,query);
-      const random = nAry(query.base).random(query.length);
+      const random = nAry(query.base)(query.length).random();
 
       var vm = new Vue({
         el: '#vm',
@@ -129,16 +129,16 @@
           base: query.base,
           length: query.length,
           message: 'Hello Vue!',
-          zero: nAry(query.base).zero(query.length),
-          last: nAry(query.base).last(query.length),
+          zero: nAry(query.base)(query.length).zero(),
+          last: nAry(query.base)(query.length).last(),
           random,
-          inc: nAry(query.base).inc(random),
-          all: nAry(query.base).all(query.length),
-          verge: nAry(query.base).verge(query.length),
-          randomSet: nAry(query.base).randomSet(query.length)(5),
-          index: nAry(query.base).index(random),
-          sumOfDigits: nAry(query.base).sumOfDigits(random),
-          sumEquals: nAry(query.base).sumEquals(query.length)(2),
+          inc: nAry(query.base)().inc(random),
+          all: nAry(query.base)(query.length).all(),
+          verge: nAry(query.base)(query.length).verge(),
+          randomSet: nAry(query.base)(query.length).randomSet(5),
+          index: nAry(query.base)().index(random),
+          sumOfDigits: nAry(query.base)().sumOfDigits(random),
+          sumEquals: nAry(query.base)(query.length).sumEquals(2),
         },
         computed: {
 
