--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     </script>
   </head>
   <body>
-    <h1><a href="" class="hash">↻</a> n-ary vectors (long numbers)</h1>
-
+    <h1><a href="" class="hash">↻</a> n-ary vectors</h1>
 
     <div id="vm" class="">
       <form id="form">
