--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <div id="vm" class="">
       <form id="form">
+        base:
         <input v-model="base" type="number" name="base" placeholder="base" value="2" min="1">
+        length:
         <input v-model="length" type="number" name="length" placeholder="length" value="1" min="0">
         <input type="submit" value="ok">
       </form>
