--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <title>n-ary vectors</title>
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
-    <script src="n-ary.js"></script>
+    <script src="n-ary.babel.js"></script>
     <script src="https://unpkg.com/vue"></script>
-    <script src="index.js">
     </script>
   </head>
   <body>
